fix: footer divider gap

--- a/packages/select/src/FilterMultiSelect/components/MenuLayout/MenuFooter/MenuFooter.module.scss
+++ b/packages/select/src/FilterMultiSelect/components/MenuLayout/MenuFooter/MenuFooter.module.scss
@@ -5,7 +5,6 @@
   border-top: 1px solid rgba($color-gray-600-rgb, 0.1);
   padding-top: $spacing-sm;
   gap: $spacing-xs;
-  display: inline-flex;
-  width: 100%;
+  display: flex;
   margin: 0 $spacing-sm;
 }
