--- a/packages/select/src/FilterMultiSelect/components/SearchInput/SearchInput.module.scss
+++ b/packages/select/src/FilterMultiSelect/components/SearchInput/SearchInput.module.scss
@@ -3,4 +3,5 @@
 .inputSearchContainer {
   position: relative;
   margin: 0 $spacing-sm;
+  margin-bottom: $spacing-sm;
 }
